--- a/app/src/main/res/layout/fragment_work_list.xml
+++ b/app/src/main/res/layout/fragment_work_list.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:contentScrim="@color/primaryColor"
-            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap"
+            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
             app:titleEnabled="false">
 
             <androidx.constraintlayout.widget.ConstraintLayout
