Add views for displaying comments and change comment fetching to HTML
As the HTML returned from parsing the JS file cannot be cleanly parsed,
the comments will be fetched directly from the HTML file instead.
Integration is partway through; works with comments will load comments,
but works without comments will crash.

--- a/app/src/main/res/layout/fragment_work_reader.xml
+++ b/app/src/main/res/layout/fragment_work_reader.xml
@@ -155,12 +155,16 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/commentsSwipeRefresh"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:minHeight="48dp">
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/commentsDisplay"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
         </LinearLayout>
 
