--- a/app/src/main/res/layout/layout_work_blurb_compact.xml
+++ b/app/src/main/res/layout/layout_work_blurb_compact.xml
@@ -174,6 +174,7 @@
         app:layout_constraintTop_toBottomOf="@+id/workFreeforms" />
 
     <com.google.android.material.chip.ChipGroup
+        android:id="@+id/workStatisticsChipGroup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -247,5 +248,6 @@
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/workStatisticsChipGroup" />
 </androidx.constraintlayout.widget.ConstraintLayout>
