--- a/app/src/main/res/navigation/library.xml
+++ b/app/src/main/res/navigation/library.xml
@@ -9,5 +9,10 @@
         android:id="@+id/libraryFragment"
         android:name="org.eidos.reader.ui.library.LibraryFragment"
         android:label="fragment_library"
-        tools:layout="@layout/fragment_library" />
+        tools:layout="@layout/fragment_library" >
+        <action
+            android:id="@+id/action_libraryFragment_to_work_reader"
+            app:destination="@id/work_reader" />
+    </fragment>
+    <include app:graph="@navigation/work_reader" />
 </navigation>
