--- a/app/src/main/res/layout/layout_work_blurb_compact.xml
+++ b/app/src/main/res/layout/layout_work_blurb_compact.xml
@@ -9,8 +9,8 @@
         android:id="@+id/workRatingIconBackground"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:clipChildren="true"
         app:cardBackgroundColor="#B2220F"
         app:cardCornerRadius="2dp"
@@ -45,40 +45,27 @@
         style="@style/heading_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
         android:text="Error retrieving work"
         app:layout_constrainedWidth="true"
-        app:layout_constraintEnd_toStartOf="@+id/dateUpdatedLL"
+        app:layout_constraintEnd_toStartOf="@+id/workDateUpdated"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/workRatingIconBackground"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/workRatingIconBackground" />
 
-    <LinearLayout
-        android:id="@+id/dateUpdatedLL"
+    <com.google.android.material.chip.Chip
+        android:id="@+id/workDateUpdated"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="24dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        app:chipBackgroundColor="@android:color/transparent"
+        app:chipIcon="@drawable/ic_card_date_updated_16"
+        app:chipIconSize="16dp"
+        app:chipMinTouchTargetSize="0dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingEnd="@dimen/space_extra_small_4dp"
-            app:srcCompat="@drawable/ic_card_date_updated_16" />
-
-        <TextView
-            android:id="@+id/workDateUpdated"
-            style="@style/body_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="@+id/workTitle" />
 
     <TextView
         android:id="@+id/workAuthors"
@@ -96,9 +83,9 @@
         style="@style/body_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="24dp"
         android:layout_weight="1"
         android:drawableStart="@drawable/ic_card_warnings_14"
         android:drawablePadding="@dimen/space_small_8dp"
@@ -113,7 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_small_8dp"
         android:drawableStart="@drawable/ic_categories_18dp"
-        android:drawablePadding="10sp"
+        android:drawablePadding="@dimen/space_small_8dp"
         android:ellipsize="end"
         android:maxLines="3"
         app:layout_constraintEnd_toEndOf="@+id/workWarnings"
@@ -127,7 +114,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_small_8dp"
         android:drawableLeft="@drawable/ic_card_relationships_14"
-        android:drawablePadding="10sp"
+        android:drawablePadding="@dimen/space_small_8dp"
         android:ellipsize="end"
         android:maxLines="3"
         app:layout_constraintEnd_toEndOf="@+id/workCategories"
@@ -141,7 +128,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_small_8dp"
         android:drawableLeft="@drawable/ic_card_characters_24"
-        android:drawablePadding="10sp"
+        android:drawablePadding="@dimen/space_small_8dp"
         android:ellipsize="end"
         android:maxLines="3"
         app:layout_constraintEnd_toEndOf="@+id/workRelationships"
@@ -155,7 +142,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_small_8dp"
         android:drawableLeft="@drawable/ic_card_freeforms_14"
-        android:drawablePadding="10sp"
+        android:drawablePadding="@dimen/space_small_8dp"
         android:ellipsize="end"
         android:maxLines="3"
         app:layout_constraintEnd_toEndOf="@+id/workCharacters"
@@ -167,7 +154,7 @@
         style="@style/body_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_medium_16dp"
+        android:layout_marginTop="24dp"
         android:text="A possible cause of this error is a bad internet connection. Please check your connection and try again."
         app:layout_constraintEnd_toEndOf="@+id/workFreeforms"
         app:layout_constraintStart_toStartOf="@+id/workFreeforms"
@@ -177,7 +164,6 @@
         android:id="@+id/workStatisticsChipGroup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="@+id/workSummary"
         app:layout_constraintStart_toStartOf="@+id/workSummary"
         app:layout_constraintTop_toBottomOf="@+id/workSummary">
@@ -188,7 +174,8 @@
             android:layout_height="wrap_content"
             app:chipBackgroundColor="@android:color/transparent"
             app:chipIcon="@drawable/ic_card_language_16"
-            app:chipIconSize="16dp" />
+            app:chipIconSize="16dp"
+            app:chipMinTouchTargetSize="0dp" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/workWordCount"
@@ -196,7 +183,8 @@
             android:layout_height="wrap_content"
             app:chipBackgroundColor="@android:color/transparent"
             app:chipIcon="@drawable/ic_card_word_count_16"
-            app:chipIconSize="16dp" />
+            app:chipIconSize="16dp"
+            app:chipMinTouchTargetSize="0dp" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/workChapters"
@@ -204,7 +192,8 @@
             android:layout_height="wrap_content"
             app:chipBackgroundColor="@android:color/transparent"
             app:chipIcon="@drawable/ic_card_chapters_16"
-            app:chipIconSize="16dp" />
+            app:chipIconSize="16dp"
+            app:chipMinTouchTargetSize="0dp" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/workKudos"
@@ -212,7 +201,8 @@
             android:layout_height="wrap_content"
             app:chipBackgroundColor="@android:color/transparent"
             app:chipIcon="@drawable/ic_card_kudos_16"
-            app:chipIconSize="16dp" />
+            app:chipIconSize="16dp"
+            app:chipMinTouchTargetSize="0dp" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/workComments"
@@ -220,7 +210,8 @@
             android:layout_height="wrap_content"
             app:chipBackgroundColor="@android:color/transparent"
             app:chipIcon="@drawable/ic_card_comments_16"
-            app:chipIconSize="16dp" />
+            app:chipIconSize="16dp"
+            app:chipMinTouchTargetSize="0dp" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/workBookmarks"
@@ -228,7 +219,8 @@
             android:layout_height="wrap_content"
             app:chipBackgroundColor="@android:color/transparent"
             app:chipIcon="@drawable/ic_card_bookmarks_16"
-            app:chipIconSize="16dp" />
+            app:chipIconSize="16dp"
+            app:chipMinTouchTargetSize="0dp" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/workHits"
@@ -236,7 +228,8 @@
             android:layout_height="wrap_content"
             app:chipBackgroundColor="@android:color/transparent"
             app:chipIcon="@drawable/ic_card_hits_16"
-            app:chipIconSize="16dp" />
+            app:chipIconSize="16dp"
+            app:chipMinTouchTargetSize="0dp" />
     </com.google.android.material.chip.ChipGroup>
 
     <View
